--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </section>
  <section>
    <h2>The Developer</h2>
-  <img src="Javascript/Alvin Photo.jpg" alt="This is Alvin" width="20%">
+  <img src="Javascript/Alvin-photo.jpg" alt="This is Alvin" width="20%">
   <h3>Alvin Adarsh Kumar</h3>
   <a href="https://www.instagram.com/alvin.adarsh_404/" target="_blank" >Instagram</a>&nbsp;&nbsp;|&nbsp;&nbsp;
   <a href="https://www.instagram.com/alvin.adarsh_404/" target="_blank" >Instagram</a>&nbsp;&nbsp;|&nbsp;&nbsp;
