--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <h1>Web Development Portfolio</h1> 
   </header>
   <nav class="nav_Bar">
-    <a href="#" id="nav_button1">Home</a>
-    <a href="#" id="nav_button2" >Projects</a>
-    <a href="#" id="nav_button3" >Tech Stacks</a>
-    <a href="#" id="nav_button4" >About Me</a>
-    <a href="#" id="nav_button5" >Contact Me</a>
+    <a href="#projects" id="nav_button1">Home</a>
+    <a href="#projects" id="nav_button2" >Projects</a>
+    <a href="#tech-stacks" id="nav_button3" >Tech Stacks</a>
+    <a href="#about" id="nav_button4" >About Me</a>
+    <a href="#about" id="nav_button5" >Contact Me</a>
   </nav>
   <main>
     <section class="section1">
       <h1 class="header2">
-        <a class="Heading">
+        <a class="Heading" name="projects">
         Projects
         </a>
       </h1>
@@ -39,8 +39,9 @@
     </div>
       
     </section>
+    <a name="tech-stacks"></a><h2>Tech Stacks</h2>
+
     <section>
-      <h2>Tech Stacks</h2>
       <div class="flex_container">
       <div class="flex-item1"><iframe width =100% src="https://www.youtube.com/embed/61ppyY5rUB0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
@@ -51,8 +52,8 @@
     
     </section>
  <section>
-   <h2>The Developer</h2>
-  <img src="Javascript/Alvin-photo.jpg" alt="This is Alvin" width="20%">
+  <a name="about"></a> <h2>The Developer</h2>
+  <img id="photo" src="/Alvin-photo.jpg" alt="This is Alvin" width="20%">
   <h3>Alvin Adarsh Kumar</h3>
   <a href="https://www.instagram.com/alvin.adarsh_404/" target="_blank" >Instagram</a>&nbsp;&nbsp;|&nbsp;&nbsp;
   <a href="https://www.instagram.com/alvin.adarsh_404/" target="_blank" >Instagram</a>&nbsp;&nbsp;|&nbsp;&nbsp;
