--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
  --></head>
 <body>
   <header>
-    <h1>Web Development Portfolio</h1> 
+    <a name="home"></a><h1>Web Development Portfolio</h1> 
   </header>
   <nav class="nav_Bar">
-    <a href="#projects" id="nav_button1">Home</a>
+    <a href="#home" id="nav_button1">Home</a>
     <a href="#projects" id="nav_button2" >Projects</a>
     <a href="#tech-stacks" id="nav_button3" >Tech Stacks</a>
     <a href="#about" id="nav_button4" >About Me</a>
