--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </section>
  <section>
   <a name="about"></a> <h2>The Developer</h2>
-  <img id="photo" src="/Alvin-photo.jpg" alt="This is Alvin" width="20%">
+  <img id="photo" src="Javascript/Alvin-photo.jpg" alt="This is Alvin" width="20%">
   <h3>Alvin Adarsh Kumar</h3>
   <a href="https://www.instagram.com/alvin.adarsh_404/" target="_blank" >Instagram</a>&nbsp;&nbsp;|&nbsp;&nbsp;
   <a href="https://www.instagram.com/alvin.adarsh_404/" target="_blank" >Instagram</a>&nbsp;&nbsp;|&nbsp;&nbsp;
