Add a new project

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       </div>
       <div class="flex-box" id="flex-top2"><div class="flex-box-top" id="flex-top2" ><a class ="flex-box-top-head" id="link2" href="Javascript/Task2.html" target="_blank">Vendor List </a></div>
       <div class="flex-box-bottom" id="flex-bottom2"><br><p id="para2">JavaScript Project to tabulate vendor performance in the form of a Database.</p><br><button id ="button2" class= "project-button" onclick="click1()"><a id="look-inside1" href="Javascript/Task2.html" target="_blank">Look inside</a></button></div></div>
-      <div class="flex-box" id="flex-box3"><div class="flex-box-top" id="flex-box-top3"><a class ="flex-box-top-head" id="link3" href="#">Coming SOON </a></div>
-      <div class="flex-box-bottom" id="flex-box-bottom2"></div></div>
+      <div class="flex-box" id="flex-box3"><div class="flex-box-top" id="flex-box-top3"><a class ="flex-box-top-head" id="link3" href="https://alvinuday.github.io/Google-Drive-Clone-/" target="_blank">Google Drive Clone </a></div>
+      <div class="flex-box-bottom" id="flex-box-bottom2"><p id="para3"> Google Drive site cloned using HTML and CSS with responsiveness for different screen sizes.</p><br><button id ="button3" class= "project-button" onclick="click1()"><a id="look-inside1" href="https://alvinuday.github.io/Google-Drive-Clone-/" target="_blank">Look inside</a></button></div></div>
       
     </div>
       
@@ -53,7 +53,7 @@
     </section>
  <section>
   <a name="about"></a> <h2>The Developer</h2>
-  <img id="photo" src="Javascript/Alvin-photo.jpg" alt="This is Alvin" width="20%">
+  <img id="photo" src="Javascript/ALVIN.png" alt="This is Alvin" >
   <h3>Alvin Adarsh Kumar</h3>
   <a href="https://www.instagram.com/alvin.adarsh_404/" target="_blank" >Instagram</a>&nbsp;&nbsp;|&nbsp;&nbsp;
   <a href="https://www.instagram.com/alvin.adarsh_404/" target="_blank" >Instagram</a>&nbsp;&nbsp;|&nbsp;&nbsp;
