--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MEGA PROJECT | Home</title>
   <link rel="stylesheet" href="style.css">
-<!--   <link rel="stylesheet" href="style.css">
- --></head>
+  <link rel="icon" href="Javascript/icon.jpg">
+ </head>
 <body>
   <header>
     <a name="home"></a><h1>Web Development Portfolio</h1> 
